--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,3 +4,14 @@ set -g status-fg cyan
 set -g status-interval 2
 set -g status-right "(TIME %H:%M) #(bash ~/.config/tmux/cpu-mem-status)"
 set -g status-right-length 60
+
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# set the pane border colors 
+set -g pane-active-border-style 'fg=cyan'
