--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,8 @@ bind l select-pane -R
 
 # set the pane border colors 
 set -g pane-active-border-style 'fg=cyan'
+
+# Start window and pane indexs at 1 so they 
+# are easier to navigate using the number keys.
+set -g base-index 1
+setw -g pane-base-index 1
