--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set -g status-style bg=default
-set -g status-fg cyan
+set -g status-fg "#A7C080"
 
 set -g status-interval 2
 set -g status-right "(TIME %H:%M) #(bash ~/.config/tmux/cpu-mem-status)"
@@ -14,7 +14,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 # set the pane border colors 
-set -g pane-active-border-style 'fg=cyan'
+set -g pane-active-border-style 'fg=#A7C080'
 
 # Start window and pane indexs at 1 so they 
 # are easier to navigate using the number keys.
