--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,3 +20,5 @@ set -g pane-active-border-style 'fg=#A7C080'
 # are easier to navigate using the number keys.
 set -g base-index 1
 setw -g pane-base-index 1
+
+set -g mode-keys vi
